# Copyright (C) 2020 Daniel Maksymow
# 
# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved.  This file is offered as-is,
# without any warranty.

static_tests = [
  'ags_acceleration_test',
  'ags_audio_application_context_test',
  'ags_audio_buffer_util_test',
  'ags_audio_signal_test',
  'ags_audio_test',
  'ags_automation_test',
  'ags_buffer_test',
  'ags_channel_test',
  'ags_char_buffer_util_test',
  'ags_devin_test',
  'ags_devout_test',
  'ags_fifoout_test',
  'ags_filter_util_test',
  'ags_fm_synth_util_test',
  'ags_fourier_transform_util_test',
  'ags_functional_audio_test',
  'ags_functional_fourier_transform_test',
  'ags_functional_pitch_test',
  'ags_functional_fast_pitch_test',
  'ags_input_test',
  'ags_midiin_test',
  'ags_midi_test',
  'ags_notation_test',
  'ags_note_test',
  'ags_output_test',
  'ags_pattern_test',
  'ags_playback_domain_test',
  'ags_playback_test',
  'ags_port_test',
  'ags_preset_test',
  'ags_recall_channel_run_test',
  'ags_recall_channel_test',
  'ags_recall_container_test',
  'ags_recall_dependency_test',
  'ags_recall_id_test',
  'ags_recall_recycling_test',
  'ags_recall_test',
  'ags_recycling_context_test',
  'ags_recycling_test',
  'ags_sf2_synth_util_test',
  'ags_sfz_synth_util_test',
  'ags_synth_generator_test',
  'ags_synth_util_test',
  'ags_track_test',
  'ags_wave_test',
  'fx/ags_fx_analyse_audio_processor_test',
  'fx/ags_fx_analyse_audio_signal_test',
  'fx/ags_fx_analyse_audio_test',
  'fx/ags_fx_analyse_channel_processor_test',
  'fx/ags_fx_analyse_channel_test',
  'fx/ags_fx_analyse_recycling_test',
  'fx/ags_fx_buffer_audio_processor_test',
  'fx/ags_fx_buffer_audio_signal_test',
  'fx/ags_fx_buffer_audio_test',
  'fx/ags_fx_buffer_channel_processor_test',
  'fx/ags_fx_buffer_channel_test',
  'fx/ags_fx_buffer_recycling_test',
  'fx/ags_fx_dssi_audio_processor_test',
  'fx/ags_fx_dssi_audio_signal_test',
  'fx/ags_fx_dssi_audio_test',
  'fx/ags_fx_dssi_channel_processor_test',
  'fx/ags_fx_dssi_channel_test',
  'fx/ags_fx_dssi_recycling_test',
  'fx/ags_fx_envelope_audio_processor_test',
  'fx/ags_fx_envelope_audio_signal_test',
  'fx/ags_fx_envelope_audio_test',
  'fx/ags_fx_envelope_channel_processor_test',
  'fx/ags_fx_envelope_channel_test',
  'fx/ags_fx_envelope_recycling_test',
  'fx/ags_fx_eq10_audio_processor_test',
  'fx/ags_fx_eq10_audio_signal_test',
  'fx/ags_fx_eq10_audio_test',
  'fx/ags_fx_eq10_channel_processor_test',
  'fx/ags_fx_eq10_channel_test',
  'fx/ags_fx_eq10_recycling_test',
  'fx/ags_fx_ladspa_audio_processor_test',
  'fx/ags_fx_ladspa_audio_signal_test',
  'fx/ags_fx_ladspa_audio_test',
  'fx/ags_fx_ladspa_channel_processor_test',
  'fx/ags_fx_ladspa_channel_test',
  'fx/ags_fx_ladspa_recycling_test',
  'fx/ags_fx_lv2_audio_processor_test',
  'fx/ags_fx_lv2_audio_signal_test',
  'fx/ags_fx_lv2_audio_test',
  'fx/ags_fx_lv2_channel_processor_test',
  'fx/ags_fx_lv2_channel_test',
  'fx/ags_fx_lv2_recycling_test',
  'fx/ags_fx_notation_audio_processor_test',
  'fx/ags_fx_notation_audio_signal_test',
  'fx/ags_fx_notation_audio_test',
  'fx/ags_fx_notation_channel_processor_test',
  'fx/ags_fx_notation_channel_test',
  'fx/ags_fx_notation_recycling_test',
  'fx/ags_fx_pattern_audio_processor_test',
  'fx/ags_fx_pattern_audio_signal_test',
  'fx/ags_fx_pattern_audio_test',
  'fx/ags_fx_pattern_channel_processor_test',
  'fx/ags_fx_pattern_channel_test',
  'fx/ags_fx_pattern_recycling_test',
  'fx/ags_fx_peak_audio_processor_test',
  'fx/ags_fx_peak_audio_signal_test',
  'fx/ags_fx_peak_audio_test',
  'fx/ags_fx_peak_channel_processor_test',
  'fx/ags_fx_peak_channel_test',
  'fx/ags_fx_peak_recycling_test',
  'fx/ags_fx_playback_audio_processor_test',
  'fx/ags_fx_playback_audio_signal_test',
  'fx/ags_fx_playback_audio_test',
  'fx/ags_fx_playback_channel_processor_test',
  'fx/ags_fx_playback_channel_test',
  'fx/ags_fx_playback_recycling_test',
  'fx/ags_fx_volume_audio_processor_test',
  'fx/ags_fx_volume_audio_signal_test',
  'fx/ags_fx_volume_audio_test',
  'fx/ags_fx_volume_channel_processor_test',
  'fx/ags_fx_volume_channel_test',
  'fx/ags_fx_volume_recycling_test',
  'midi/ags_midi_buffer_util_test',
  'midi/ags_midi_builder_test',
  'osc/ags_functional_osc_server_test',
  'osc/ags_functional_osc_xmlrpc_server_test',
  'osc/ags_osc_buffer_util_test',
  'osc/ags_osc_client_test',
  'osc/ags_osc_connection_test',
  'osc/ags_osc_message_test',
  'osc/ags_osc_server_test',
  'osc/ags_osc_websocket_connection_test',
  'osc/ags_osc_xmlrpc_message_test',
  'osc/ags_osc_xmlrpc_server_test',
  'osc/controller/ags_osc_action_controller_test',
  'osc/controller/ags_osc_config_controller_test',
  'osc/controller/ags_osc_front_controller_test',
  'osc/controller/ags_osc_info_controller_test',
  'osc/controller/ags_osc_meter_controller_test',
  'osc/controller/ags_osc_node_controller_test',
  'osc/controller/ags_osc_renew_controller_test',
  'osc/controller/ags_osc_status_controller_test',
  'osc/xmlrpc/ags_osc_xmlrpc_controller_test',
  'recall/ags_analyse_audio_signal_test',
  'recall/ags_analyse_channel_test',
  'recall/ags_buffer_audio_signal_test',
  'recall/ags_buffer_channel_test',
  'recall/ags_capture_wave_audio_test',
  'recall/ags_capture_wave_channel_test',
  'recall/ags_copy_audio_signal_test',
  'recall/ags_copy_channel_test',
  'recall/ags_copy_pattern_audio_test',
  'recall/ags_copy_pattern_channel_test',
  'recall/ags_count_beats_audio_test',
  'recall/ags_delay_audio_test',
  'recall/ags_envelope_audio_signal_test',
  'recall/ags_envelope_channel_test',
  'recall/ags_eq10_audio_signal_test',
  'recall/ags_eq10_channel_test',
  'recall/ags_feed_audio_signal_test',
  'recall/ags_mute_audio_signal_test',
  'recall/ags_mute_audio_test',
  'recall/ags_mute_channel_test',
  'recall/ags_peak_audio_signal_test',
  'recall/ags_peak_channel_test',
  'recall/ags_play_audio_signal_test',
  'recall/ags_play_audio_test',
  'recall/ags_play_channel_test',
  'recall/ags_play_wave_audio_test',
  'recall/ags_play_wave_channel_test',
  'recall/ags_prepare_audio_signal_test',
  'recall/ags_record_midi_audio_test',
  'recall/ags_route_dssi_audio_test',
  'recall/ags_route_lv2_audio_test',
  'recall/ags_stream_audio_signal_test',
  'recall/ags_volume_audio_signal_test',
  'recall/ags_volume_channel_test',
  # 'sndfile-test', TODO: compilation error
  'task/ags_add_audio_signal_test',
  'task/ags_add_audio_test',
  'task/ags_add_effect_test',
  'task/ags_add_note_test',
  'task/ags_add_soundcard_test',
  'task/ags_apply_bpm_test',
  'task/ags_apply_presets_test',
  'task/ags_apply_sequencer_length_test',
  'task/ags_apply_synth_test',
  'task/ags_apply_tact_test',
  'task/ags_cancel_audio_test',
  'task/ags_cancel_channel_test',
  'task/ags_clear_audio_signal_test',
  'task/ags_clear_buffer_test',
  'task/ags_crop_note_test',
  'task/ags_export_output_test',
  'task/ags_free_selection_test',
  'task/ags_link_channel_test',
  'task/ags_move_note_test',
  # 'task/ags_notify_soundcard_test', TODO: compilation error
  'task/ags_remove_audio_signal_test',
  'task/ags_remove_audio_test',
  'task/ags_remove_note_test',
  'task/ags_remove_soundcard_test',
  'task/ags_reset_amplitude_test',
  'task/ags_reset_peak_test',
  'task/ags_resize_audio_test',
  'task/ags_seek_soundcard_test',
  'task/ags_set_audio_channels_test',
  'task/ags_set_buffer_size_test',
  'task/ags_set_device_test',
  'task/ags_set_format_test',
  'task/ags_set_muted_test',
  'task/ags_set_samplerate_test',
  'task/ags_start_audio_test',
  'task/ags_start_channel_test',
]

static_test_dependencies = [
  common_test_dependencies,
  xml2_dependency,
  soup_dependency,
  instpatch_dependency,
  dl_dependency,
]

if get_option('gstreamer')
  static_test_dependencies += gstreamer_dependency + gstreamer_audio_dependency + gstreamer_video_dependency + gstreamer_app_dependency + gstreamer_pbutils_dependency
endif

foreach static_test : static_tests
  source = ['@0@.c'.format(static_test)]
  if static_test.contains('/')
    tmp = static_test.split('/')
    static_test = '_'.join(tmp)
  endif

  static_test_bin = executable(
    static_test,
    source,
    c_args: [compiler_flags, srcdir_def],
    include_directories: [includes],
    dependencies: [static_test_dependencies],
    link_with: [
      libags,
      libags_thread,
      libags_server,
      libags_audio,
    ]
  )

  test(static_test, static_test_bin)
endforeach
